feat: store new item in cart
